{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 18,
  "lineage": "e6eb9d20-e074-292f-c69c-fd58af98916c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:623469066856:internet-gateway/igw-0348735439fd83e25",
            "id": "igw-0348735439fd83e25",
            "owner_id": "623469066856",
            "tags": {
              "Name": "mol-eks-demo"
            },
            "tags_all": {
              "Name": "mol-eks-demo"
            },
            "vpc_id": "vpc-024e047739fd0741a"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:623469066856:route-table/rtb-0bf271ce12c104141",
            "id": "rtb-0bf271ce12c104141",
            "owner_id": "623469066856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0348735439fd83e25",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024e047739fd0741a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084d7b29ba54bb75b",
            "route_table_id": "rtb-0bf271ce12c104141",
            "subnet_id": "subnet-06b67b1b87ad714ac"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054620bb550c08566",
            "route_table_id": "rtb-0bf271ce12c104141",
            "subnet_id": "subnet-0d6bda5b9c49bd37e"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:623469066856:security-group/sg-0ff22cfc61de97b4a",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff22cfc61de97b4a",
            "ingress": [],
            "name": "mol-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "623469066856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mol-eks-demo"
            },
            "tags_all": {
              "Name": "mol-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-024e047739fd0741a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.58.180.240/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1339632294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ff22cfc61de97b4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:623469066856:subnet/subnet-06b67b1b87ad714ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b67b1b87ad714ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "623469066856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mol-eks-demo-node",
              "kubernetes.io/cluster/mol-control-m-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "mol-eks-demo-node",
              "kubernetes.io/cluster/mol-control-m-eks-demo": "shared"
            },
            "vpc_id": "vpc-024e047739fd0741a"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:623469066856:subnet/subnet-0d6bda5b9c49bd37e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bda5b9c49bd37e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "623469066856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mol-eks-demo-node",
              "kubernetes.io/cluster/mol-control-m-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "mol-eks-demo-node",
              "kubernetes.io/cluster/mol-control-m-eks-demo": "shared"
            },
            "vpc_id": "vpc-024e047739fd0741a"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:623469066856:vpc/vpc-024e047739fd0741a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033cb6fc84c8aec5f",
            "default_route_table_id": "rtb-00381bdf7ea8341ec",
            "default_security_group_id": "sg-0f77d3f2fce9ee35b",
            "dhcp_options_id": "dopt-936037fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-024e047739fd0741a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00381bdf7ea8341ec",
            "owner_id": "623469066856",
            "tags": {
              "Name": "mol-eks-demo-node",
              "kubernetes.io/cluster/mol-control-m-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "mol-eks-demo-node",
              "kubernetes.io/cluster/mol-control-m-eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}